--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -42,7 +42,7 @@ h2, h3, h4 {
     margin: 50px auto;
 }
 
-p {
+p, ol {
     font-family: 'Overpass', Sans-Serif;
     width: 50%;
     text-align: left;
@@ -112,10 +112,52 @@ p {
     text-align: left;
 }
 
+/* images contained in individual portfolio projects*/
 .image {
-    width: 60%;
+    width: 40%;
     margin: 0 auto;
     text-align: right;
+}
+
+.header {
+    font-family: 'Oswald', sans-serif;
+    text-align: left;
+}
+
+.carousel-item {
+    width: 60%
+    margin: 0 auto;
+    text-align: right;
+}
+
+/* Create two unequal columns that floats next to each other */
+.column {
+    display: inline-block;
+    padding: 10px;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
+
+.mini {
+  width: 37.4%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.mySlides {
+     display:none;
+     width: 100%;
 }
 
 #icon1, #icon2 {
@@ -124,7 +166,7 @@ p {
 }
 
 #headshot {
-    width: 40%;
+    width: 10%;
     text-align: right;
 }
 
@@ -139,7 +181,74 @@ p {
     float: left;
 }
 
+/* The dropdown container */
+.dropdown {
+  overflow: hidden;
+}
 
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 25px;
+  border: none;
+  outline: none;
+  color: black;
+  padding-right: 35px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a:hover, .dropdown:hover .dropbtn {
+    text-decoration: underline;
+}
+
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+  #sidebar {
+      width: 100%;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {...}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {...}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {...}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {...}
 
 
 
